manifests/seraphim/prod/argocd/HTTPRoute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
    - argocd.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
